--- a/src/views/partials/dietary-info.hbs
+++ b/src/views/partials/dietary-info.hbs
@@ -18,13 +18,13 @@
   </ul>
   <ul class='dietary-info__spiciness'>Spiciness:
     {{#if (greaterThanEqualTo spiciness 1)}}
-    <li class='dietary-info__dietary__vegetarian'>c</li>
+    <li class='dietary-info__dietary__vegetarian'>🌶</li>
     {{/if}}
     {{#if (greaterThanEqualTo spiciness 2)}}
-    <li class='dietary-info__dietary__vegan'>c</li>
+    <li class='dietary-info__dietary__vegan'>🌶</li>
     {{/if}}
     {{#if (greaterThanEqualTo spiciness 3)}}
-    <li class='dietary-info__dietary__glutenFree'>c</li>
+    <li class='dietary-info__dietary__glutenFree'>🌶</li>
     {{/if}}
 
   </ul>
