--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,26 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
   background-color: #F9FAFB;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 1em;
   color: #16191D;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 main {
   padding: 1.5em;
+  width: 100vw;
+  max-width: 400px;
+  border: 2px solid #610505;
 }
 
 .footer {
@@ -172,6 +186,60 @@ button {
 .main-logo-container .main-logo {
   height: 145px;
   width: 145px;
+}
+
+.dietary-info ul,
+.item-info__info__servings {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.dietary-info ul li,
+.item-info__info__servings li {
+  margin: 0 0.25em;
+}
+
+.item-info {
+  width: 100%;
+}
+
+.item-info__name {
+  font-family: "Abril Fatface", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 2em;
+}
+
+.item-info__image {
+  margin-left: -1.5em;
+  width: calc(100% + 3em - 0.5px);
+}
+
+.item-info__container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  grid-gap: 0.5em;
+}
+
+.item-info__info,
+.dietary-info {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  grid-gap: 0.25em;
+}
+
+.item-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 1em;
 }
 
 .create-header {
