--- a/src/views/add.hbs
+++ b/src/views/add.hbs
@@ -17,7 +17,8 @@
   <input class="add-form__input" type="text" name="teaser" id="teaser" required>
 
   <label for="spiciness" class="form-input-labels">Spiciness</label>
-  <select name="spiciness" id="spiciness" required>
+  <select class="add-form__input" name="spiciness" id="spiciness" required>
+    <option value="">--Select spiciness--</option>
     <option value="0">Not spicy</option>
     <option value="1">Mild</option>
     <option value="2">Medium</option>
