--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,6 +56,7 @@ button {
   font-family: "Abril Fatface", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 2.75em;
   cursor: pointer;
+  margin-bottom: 0.5em;
 }
 
 .menu-link {
@@ -157,12 +158,15 @@ button {
 
 .create-header {
   font-size: 1.5em;
-  margin-top: 0.5em;
   margin-bottom: 1em;
 }
 
 .form-input-labels {
   font-size: 1.125em;
+}
+
+.form-input-labels__dietary {
+  align-self: flex-start;
 }
 
 .red-button {
