--- a/src/views/success.hbs
+++ b/src/views/success.hbs
@@ -1,2 +1,9 @@
-<h1>Hooray!</h1>
-<p>You were successful in {{ action }}ing your {{ item }}</p>
+<h1 class="success-title">Hooray!</h1>
+
+<h2 class="success-claim">You've claimed:</h2>
+<h3>{{ data.name }}</h3>
+
+<p>{{ data.collection_time }}</p>
+<p>{{ data.collection_location }}</p>
+
+<a href="/dish-listings">See more food</a>
