--- a/src/views/listings.hbs
+++ b/src/views/listings.hbs
@@ -1,4 +1,4 @@
-<h1>{{titlecase item}} Listings</h1>
+<a href="/{{ this.item }}-add"><i class="fas fa-plus-circle"> Add your own </i></a>
 
 <ul>
     {{#each data}}
