--- a/src/views/partials/card.hbs
+++ b/src/views/partials/card.hbs
@@ -9,7 +9,7 @@
     </div>
     <div class="card__teaser">
         <div class="card-options">
-            <a class="card-options__more-info" href="/{{item}}-{{id}}">More Info</a>
+            <a class="card-options__more-info" href="/{{item}}-{{id}}"><i class="fas fa-info-circle"></i> Hungry for more? <br> Click here! </a>
         </div>
         <p>{{teaser}}</p>
     </div>
