--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,27 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
   background-color: #F9FAFB;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 1em;
   color: #16191D;
   line-height: 1.3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 main {
   padding: 1.5em;
+  width: 100vw;
+  max-width: 400px;
+  border: 2px solid #610505;
 }
 
 a {
@@ -140,56 +154,6 @@ button {
   padding-right: 0.5em;
 }
 
-.main-menu {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin: 1.5em 0;
-}
-
-details {
-  flex-direction: column;
-}
-
-.main-menu__options {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.main-menu__options li {
-  margin: 1em 0;
-}
-
-summary {
-  background-color: #AA0808;
-  color: #F9FAFB;
-  border-radius: 5px;
-  text-transform: uppercase;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-  height: 40px;
-  width: 145px;
-  font-size: 1.125em;
-  font-weight: lighter;
-  letter-spacing: 1px;
-  width: 60vw;
-  text-align: center;
-  line-height: 40px;
-}
-
-summary::-webkit-details-marker {
-  display: none;
-}
-
-.food-options {
-  margin-bottom: 110px;
-}
-
-.food-options[open] {
-  margin-bottom: 0;
-}
-
 .add-form {
   display: flex;
   flex-direction: column;
@@ -204,6 +168,60 @@ summary::-webkit-details-marker {
   border-bottom: 1px solid #AA0808;
   min-height: 45px;
   margin-bottom: 1em;
+}
+
+.dietary-info ul,
+.item-info__info__servings {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.dietary-info ul li,
+.item-info__info__servings li {
+  margin: 0 0.25em;
+}
+
+.item-info {
+  width: 100%;
+}
+
+.item-info__name {
+  font-family: "Abril Fatface", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 2em;
+}
+
+.item-info__image {
+  margin-left: -1.5em;
+  width: calc(100% + 3em - 0.5px);
+}
+
+.item-info__container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  grid-gap: 0.5em;
+}
+
+.item-info__info,
+.dietary-info {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  grid-gap: 0.25em;
+}
+
+.item-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 1em;
 }
 
 .create-header {
