--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,42 +1,56 @@
 //SASS autocompile
 
-@import './variables';
+@import "./variables";
 
+* {
+  box-sizing: border-box;
+}
 body {
-    background-color: $background-color;
-    font-family: $system-font;
-    font-size: $regular-size;
-    color: $font-color;
-    line-height: 1.3;
+  line-height: 1.3;
+  background-color: $background-color;
+  font-family: $system-font;
+  font-size: $regular-size;
+  color: $font-color;
+  display: flex;
+  justify-content: center;
 }
 
 main {
-    padding: $base;
+  padding: $base;
+  width: 100vw;
+  max-width: 400px;
+  border: 2px solid $dark-red;
+}
+
+.footer {
+  position: sticky;
+  font-size: $small-size;
+  margin: 0 $base $base;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 button {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .more-info {
-    display: flex;
-    justify-content: flex-end;
-    color: $accent-yellow;
-    font-size: $h4-size;
-    cursor: pointer;
+  display: flex;
+  justify-content: flex-end;
+  color: $accent-yellow;
+  font-size: $h4-size;
+  cursor: pointer;
 
-    p {
-        text-decoration: underline;
-    }
+  p {
+    text-decoration: underline;
+  }
 }
 
 .homepage {
-    @include alignCenter();
-    flex-direction: column;
+  @include alignCenter();
+  flex-direction: column;
 }
 
 .homepage__logo {
@@ -61,12 +75,12 @@ button {
 }
 
 .menu-link {
-    @include menuLink;
+  @include menuLink;
 }
 
 .login-options {
-    flex-direction: column;
-    @include alignCenter();
+  flex-direction: column;
+  @include alignCenter();
 }
 
 .login-options__login {
@@ -74,21 +88,30 @@ button {
 }
 
 .login-options__register {
-    margin-top: 0.5 * $base;
-    text-transform: uppercase;
+  margin-top: 0.5 * $base;
+  text-transform: uppercase;
+}
+
+.about-dish__heading {
+  font-size: $h3-size;
+  font-family: $decorative-font;
+}
+
+.about-dish__logo {
+  @include mediumLogo();
 }
 
 .return-link {
-    text-decoration: underline;
-    color: $font-color;
+  text-decoration: underline;
+  color: $font-color;
 }
 
 .main-logo-container {
-    @include alignCenter();
+  @include alignCenter();
 
-    .main-logo {
-        @include bigLogo();
-    }
+  .main-logo {
+    @include bigLogo();
+  }
 }
 
 // ABOUT pages
@@ -128,48 +151,51 @@ button {
   padding-right: $tiny;
 }
 
+// DISH PAGE
 
-//MAIN PAGE
-
-.main-menu {
-    @include alignCenter();
-    flex-direction: column;
-    margin: $base 0;
+.dietary-info ul,
+.item-info__info__servings {
+  width: 100%;
+  display: flex;
 }
 
-details {
-    flex-direction: column;
+.dietary-info ul li,
+.item-info__info__servings li {
+  margin: 0 0.25em;
 }
 
-.main-menu__options {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.item-info {
+  width: 100%;
 }
 
-.main-menu__options li {
-    margin: $small 0;
+.item-info__name {
+  font-family: $decorative-font;
+  font-size: $h2-size;
 }
 
-summary {
-    @include redButton();
-    width: 60vw;
-    text-align: center;
-    line-height: 40px;
+.item-info__image {
+  margin-left: -$base;
+  width: calc(100% + #{2 * $base} - 0.5px);
 }
 
-summary::-webkit-details-marker {
-    display: none;
+.item-info__container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 0.5em;
 }
 
-.food-options {
-    margin-bottom: 110px;
+.item-info__info,
+.dietary-info {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 0.25em;
 }
 
-.food-options[open] {
-    margin-bottom: 0;
+.item-form {
+  display: flex;
+  justify-content: center;
+  margin-top: 1em;
 }
-
 
 // CREATE COMMUNITY FORM PAGE - Bobby
 
@@ -209,4 +235,5 @@ summary::-webkit-details-marker {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: $h2-size;
 }
