write registration route

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -9,6 +9,6 @@
 </div>
 
 <div class="login-options">
-    <button class="red-button login-options__login">Log In</button>
-    <button class="menu-link login-options__register">Register</button>
+    <a href="/login"><button class="red-button login-options__login">Log In</button></a>
+    <a href="/register"><button class="menu-link login-options__register">Register</button></a>
 </div>
