update registration form and route

--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -1,6 +1,6 @@
 <h1>This is the registration page</h1>
 
-<form action="register-submit" method="POST">
+<form action="register" method="POST">
   <label for="register__username">name:
     <input id='register__username' type="text" name='username' required>
   </label>
@@ -8,7 +8,7 @@
     <input id='register__password' type="password" name='password' required>
   </label>
   <label for="register__email">email:
-    <input id='register__email' type="text" name='email' required>
+    <input id='register__email' type="email" name='email' required>
   </label>
   <label for="register__image">image:
     <input id='register__image' type="text" name='image' required>
