--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,1 +1,13 @@
 <h1>This is the login form</h1>
+
+<form action="login" method="POST">
+  <label for="login__email">email:
+    <input id='login__email' type="email" name='email' required>
+  </label>
+  <label for="login__password">password:
+    <input id='login__password' type="password" name='password' required>
+  </label>
+
+
+  <button>Login</button>
+</form>
