found bug in add community form

--- a/src/views/add.hbs
+++ b/src/views/add.hbs
@@ -83,40 +83,40 @@
 
   <label for="borough">Where is your community?<sup class="required-asterisk">*</sup></label>
   <select class="add-form__input" name="borough" id="borough" required>
-    <option value="">--Please select borough--</option>
-    <option value="">lambeth</option>
-    <option value="">havering</option>
-    <option value="">bexley</option>
-    <option value="">redbridge</option>
-    <option value="">enfield</option>
-    <option value="">walthamforest</option>
-    <option value="">sutton</option>
-    <option value="">kingston</option>
-    <option value="">bromley</option>
-    <option value="">croydon</option>
-    <option value="">barkinganddagenham</option>
-    <option value="">newham</option>
-    <option value="">greenwich</option>
-    <option value="">towerhamlets</option>
-    <option value="">hackney</option>
-    <option value="">islington</option>
-    <option value="">cityoflondon</option>
-    <option value="">merton</option>
-    <option value="">lewisham</option>
-    <option value="">southwark</option>
-    <option value="">haringey</option>
-    <option value="">wandsworth</option>
-    <option value="">westminster</option>
-    <option value="">camden</option>
-    <option value="">barnet</option>
-    <option value="">kensingtonandchelsea</option>
-    <option value="">hammersmithandfulham</option>
-    <option value="">brent</option>
-    <option value="">harrow</option>
-    <option value="">richmond</option>
-    <option value="">hounslow</option>
-    <option value="">hillingdon</option>
-    <option value="">ealing</option>
+    <option value="unknown">--Please select borough--</option>
+    <option>lambeth</option>
+    <option>havering</option>
+    <option>bexley</option>
+    <option>redbridge</option>
+    <option>enfield</option>
+    <option>walthamforest</option>
+    <option>sutton</option>
+    <option>kingston</option>
+    <option>bromley</option>
+    <option>croydon</option>
+    <option>barkinganddagenham</option>
+    <option>newham</option>
+    <option>greenwich</option>
+    <option>towerhamlets</option>
+    <option>hackney</option>
+    <option>islington</option>
+    <option>cityoflondon</option>
+    <option>merton</option>
+    <option>lewisham</option>
+    <option>southwark</option>
+    <option>haringey</option>
+    <option>wandsworth</option>
+    <option>westminster</option>
+    <option>camden</option>
+    <option>barnet</option>
+    <option>kensingtonandchelsea</option>
+    <option>hammersmithandfulham</option>
+    <option>brent</option>
+    <option>harrow</option>
+    <option>richmond</option>
+    <option>hounslow</option>
+    <option>hillingdon</option>
+    <option>ealing</option>
   </select>
 
   {{/if}}
