--- a/src/views/listings.hbs
+++ b/src/views/listings.hbs
@@ -1,4 +1,6 @@
-<a href="/{{ this.item }}-add"><i class="fas fa-plus-circle"> Add your own </i></a>
+<a href="/{{ this.item }}-add" class="add-item"><i class="fas fa-plus-circle"> </i>
+    Add your own
+</a>
 
 <ul>
     {{#each data}}
