--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -4,7 +4,9 @@ $default-red: #AA0808;
 $dark-red: #610505;
 $background-color: #F9FAFB;
 $input-grey: #E2E5E9;
+$opaque-grey: rgba(226, 229, 233, 0.6);
 $accent-yellow: #F8C154;
+$accent-gold: #AB7507;
 $accent-green: #45BA96;
 
 //fonts
@@ -99,10 +101,10 @@ $x-large: 4em;
 }
 
 @mixin userInput {
-  width: 100%;
-  background: $input-grey;
-  border-left: $input-grey;
-  border-top: $input-grey;
-  border-right: $input-grey;
-  border-bottom: 1px solid $default-red;
+    width: 100%;
+    background: $input-grey;
+    border-left: $input-grey;
+    border-top: $input-grey;
+    border-right: $input-grey;
+    border-bottom: 1px solid $default-red;
 }
