--- a/public/css/style.css
+++ b/public/css/style.css
@@ -382,4 +382,52 @@ summary::-webkit-details-marker {
           justify-content: center;
   margin-top: 1em;
 }
+
+.add-item {
+  color: #45BA96;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+.add-item i {
+  font-size: 1.5em;
+  margin-bottom: 1em;
+}
+
+.card__image img {
+  margin-left: calc(-1.5em + 0.5px);
+  width: calc(100% + 3em - 1px);
+}
+
+.card__image {
+  position: relative;
+}
+
+.card__info {
+  margin-left: calc(-1.5em + 0.5px);
+  width: calc(100% + 3em - 1px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0.5em;
+  padding-left: 1em;
+  height: 1.5em;
+  font-family: "Abril Fatface", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 1.5em;
+  background-color: rgba(226, 229, 233, 0.6);
+}
+
+.card__teaser {
+  margin-left: -0.5em;
+  color: #4C5866;
+}
+
+.card__options {
+  text-align: center;
+  padding-bottom: 1em;
+}
+
+.card__options a {
+  color: #AB7507;
+  text-decoration: underline;
+}
 /*# sourceMappingURL=style.css.map */
