capitalise borough names

--- a/src/views/add.hbs
+++ b/src/views/add.hbs
@@ -84,39 +84,39 @@
   <label for="borough">Where is your community?<sup class="required-asterisk">*</sup></label>
   <select class="add-form__input" name="borough" id="borough" required>
     <option value="">--Please select borough--</option>
-    <option value="">lambeth</option>
-    <option value="">havering</option>
-    <option value="">bexley</option>
-    <option value="">redbridge</option>
-    <option value="">enfield</option>
-    <option value="">walthamforest</option>
-    <option value="">sutton</option>
-    <option value="">kingston</option>
-    <option value="">bromley</option>
-    <option value="">croydon</option>
-    <option value="">barkinganddagenham</option>
-    <option value="">newham</option>
-    <option value="">greenwich</option>
-    <option value="">towerhamlets</option>
-    <option value="">hackney</option>
-    <option value="">islington</option>
-    <option value="">cityoflondon</option>
-    <option value="">merton</option>
-    <option value="">lewisham</option>
-    <option value="">southwark</option>
-    <option value="">haringey</option>
-    <option value="">wandsworth</option>
-    <option value="">westminster</option>
-    <option value="">camden</option>
-    <option value="">barnet</option>
-    <option value="">kensingtonandchelsea</option>
-    <option value="">hammersmithandfulham</option>
-    <option value="">brent</option>
-    <option value="">harrow</option>
-    <option value="">richmond</option>
-    <option value="">hounslow</option>
-    <option value="">hillingdon</option>
-    <option value="">ealing</option>
+    <option value="">Lambeth</option>
+    <option value="">Havering</option>
+    <option value="">Bexley</option>
+    <option value="">Redbridge</option>
+    <option value="">Enfield</option>
+    <option value="">Waltham Forest</option>
+    <option value="">Sutton</option>
+    <option value="">Kingston</option>
+    <option value="">Bromley</option>
+    <option value="">Croydon</option>
+    <option value="">Barking and Dagenham</option>
+    <option value="">Newham</option>
+    <option value="">Greenwich</option>
+    <option value="">Tower Hamlets</option>
+    <option value="">Hackney</option>
+    <option value="">Islington</option>
+    <option value="">City Of London</option>
+    <option value="">Merton</option>
+    <option value="">Lewisham</option>
+    <option value="">Southwark</option>
+    <option value="">Haringey</option>
+    <option value="">Wandsworth</option>
+    <option value="">Westminster</option>
+    <option value="">Camden</option>
+    <option value="">Barnet</option>
+    <option value="">Kensington and Chelsea</option>
+    <option value="">Hammersmith and Fulham</option>
+    <option value="">Brent</option>
+    <option value="">Harrow</option>
+    <option value="">Richmond</option>
+    <option value="">Hounslow</option>
+    <option value="">Hillingdon</option>
+    <option value="">Ealing</option>
   </select>
 
   {{/if}}
